[package]
name = "uniswap-log-stream"
version = "0.1.0"
rust-version = "1.74"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0"
ethers-providers = { version = "2.0", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4.10", features = ["derive"] }